####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_mpegdemuxer.a

INCLUDES = $(all_includes)

libADM_mpegdemuxer_a_METASOURCES = AUTO

libADM_mpegdemuxer_a_SOURCES = dmx_io.cpp dmx_demuxer.cpp dmx_indexer.cpp dmx_demuxerES.cpp dmx_video.cpp


EXTRA_DIST = 

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS =  
