####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liboplug_avi.a

INCLUDES = $(all_includes)

liboplug_avi_a_METASOURCES = AUTO

liboplug_avi_a_SOURCES = op_savesmart.cpp op_saveprocess.cpp op_saveproc2pass.cpp op_aviwrite.cpp op_avisavedual.cpp op_avisavecopy.cpp op_avisave.cpp 


EXTRA_DIST = op_avisave.cpp op_avisave.h op_avisavecopy.cpp op_avisavedual.cpp op_aviwrite.cpp op_aviwrite.hxx op_savecopy.h op_saveproc2pass.cpp op_saveprocess.cpp op_saveprocess.h op_savesmart.cpp op_savesmart.hxx 

####### kdevelop will overwrite this part!!! (end)############
