noinst_LIBRARIES = liblibtoolame.a
 

liblibtoolame_a_METASOURCES = AUTO

liblibtoolame_a_SOURCES = ath.c availbits.c bitbuffer.c  crc.c dab.c encode.c energy.c fft.c mem.c psycho_0.c psycho_1.c psycho_2.c psycho_3.c psycho_4.c psycho_n1.c subband.c tables.c toolame.c get_set.c version.c

noinst_HEADERS =  absthr.h ath.h availbits.h bitbuffer.h common.h crc.h critband.h dab.h encode_new.h encoder.h energy.h enwindow.h fft.h freqtable.h mem.h musicin.h psycho_0.h psycho_1.h psycho_2.h psycho_3.h psycho_4.h psycho_n1.h subband.h tables.h toolame.h toolame_global_flags.h

INCLUDES= -DNDEBUG -DINLINE=inline 
