####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_gui.a

## INCLUDES were found outside kdevelop specific part

libADM_gui_a_METASOURCES = AUTO

libADM_gui_a_SOURCES = GUI_cutWiz.cpp GUI_lavEncoder.cpp GUI_encoder.cpp GUI_DivxEncoder.cpp GUI_decodersettings.cpp


EXTRA_DIST = GUI_decodersettings.cpp GUI_decodersettings.h  GUI_encoder.cpp GUI_encoder.h  GUI_lavEncoder.cpp  GUI_mux.h   GUI_cutWiz.cpp  GUI_xvidparam.h  

####### kdevelop will overwrite this part!!! (end)############
INCLUDES= $(all_includes) $(GTK_CFLAGS)
