####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_script.a


libADM_script_a_METASOURCES = AUTO

libADM_script_a_SOURCES = adm_lexgen.c adm_yacgen.c adm_scanner.h adm_scanner.cpp adm_command.cpp


EXTRA_DIST =  adm_yacgen.h

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS =  adm_command.h
