####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_script.a


libADM_script_a_METASOURCES = AUTO

libADM_script_a_SOURCES = adm_lexgen.c adm_yacgen.c adm_scanner.h \
		adm_scanner.cpp adm_command.cpp ADM_JSAvidemux.cpp ADM_JSAvidemux.h ADM_JSGlobal.cpp \
		ADM_JSGlobal.h ADM_Avidemux.cpp ADM_AvidemuxAudio.cpp ADM_JSAvidemuxAudio.cpp \
	ADM_AvidemuxVideo.cpp ADM_JSAvidemuxVideo.cpp


EXTRA_DIST =  adm_yacgen.h

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS = adm_command.h ADM_JSGlobal.h ADM_Avidemux.h \
		ADM_AvidemuxAudio.h ADM_JSAvidemuxAudio.h ADM_AvidemuxVideo.h ADM_JSAvidemuxVideo.h




INCLUDES = -I$(top_srcdir)/avidemux

