####### kdevelop will overwrite this part!!! (begin)##########
noinst_PROGRAMS = libADM_audio.o
libADM_audio_o_LDFLAGS =  -r
LIBS =  
AM_LDFLAGS = 

INCLUDES = $(all_includes)

libADM_audio_o_METASOURCES = AUTO

libADM_audio_o_SOURCES = audio_mpegidentify.cpp aviaudio.cpp audiowavex.cpp \
		audiotimeline.cpp audiosource_ext.cpp audiomp3ex.cpp audiogen.cpp audioac3ex.cpp \
		ADM_a52info.cpp audio_packetizer.cpp ADM_mp3info.cpp ADM_aacinfo.cpp


EXTRA_DIST = audioac3ex.cpp audiogen.cpp audioex.h audiomode.hxx audiomp3ex.cpp audiosource_ext.cpp audiosource_ext.h audiotimeline.cpp audiowavex.cpp aviaudio.cpp aviaudio.hxx audio_mpegidentify.cpp 

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS = ADM_a52info.h ADM_mp3info.h ADM_aacinfo.h
