####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_audiocodec.a

INCLUDES = $(all_includes)

libADM_audiocodec_a_METASOURCES = AUTO

libADM_audiocodec_a_SOURCES = ADM_codecwma.cpp ADM_ffwma.cpp mad.cpp \
	audiocodec_ogg.cpp ADM_codecwav.cpp ADM_codecmp3.cpp ADM_codecac3.cpp ADM_audiocodec.cpp \
	ADM_AC3.cpp ADM_lpcm.cpp ADM_8bits.cpp ADM_codecfaad.cpp ADM_codeculaw.cpp \
ADM_codecimaadpcm.cpp


EXTRA_DIST = ADM_AC3.cpp ADM_AC3.h ADM_audiocodec.cpp ADM_audiocodec.h ADM_codecac3.cpp ADM_codecmp3.cpp ADM_codecwav.cpp adm_ogg.h audiocodec_ogg.cpp avdm_mad.h mad.cpp ADM_ffwma.cpp ADM_codecwma.cpp 

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS = ADM_vorbis.h 
